# acero

./: .gitignore  README.md  pyproject.toml
acero/mkt/: .user.yml  dbt_project.yml  profiles.yml
acero/mkt/models/: kpi_bank_marketing.sql  schema.yml  stg_bank_marketing.sql
acero/mkt/tests/: check_duplicates_uniqueness_constraints.sql  duration_and_y_business_rule.sql
acero/mkt/tests/generic/: is_bigger_than.sql  is_less_than.sql  is_natural_number.sql  not_empty_str.sql
